--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <main>
   <h1>GitHub Pages のサンプルですよ。</h1>
+  <p>Netify始めました</p>
   <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
 </main>
 
